# microwatt

./: .gitignore  .travis.yml  LICENSE  Makefile  Makefile.synth  README.md  bitsort.vhdl  cache_ram.vhdl  common.vhdl  control.vhdl  core.vhdl  core_debug.vhdl  core_dram_tb.vhdl  core_flash_tb.vhdl  core_tb.vhdl  countbits.vhdl  countbits_tb.vhdl  countzero.vhdl  countzero_tb.vhdl  cr_file.vhdl  cr_hazard.vhdl  crhelpers.vhdl  dcache.vhdl  dcache_tb.vhdl  decode1.vhdl  decode2.vhdl  decode_types.vhdl  divider.vhdl  divider_tb.vhdl  dmi_dtm_dummy.vhdl  dmi_dtm_ecp5.vhdl  dmi_dtm_jtag.vhdl  dmi_dtm_tb.vhdl  dmi_dtm_xilinx.vhdl  dram_tb.vhdl  even.hex  execute1.vhdl  execute2.vhdl  fetch1.vhdl  fetch2.vhdl  (+64 more)
asic/: cache_ram.vhdl  main_bram.vhdl  microwatt_asic-verilator.cpp  multiply.vhdl  register_file.vhdl  top-asic.vhdl
blinky/: Makefile  blinky.c  head.S
caravel/: insert_power.py  process-microwatt-verilog.sh
caravel_bram/: DFFRAM.v  RAM_512x64.v
constraints/: ecp5-evn.lpf  ecpix-5.lpf  orange-crab-0.2.lpf  orange-crab.lpf
fpga/: antmicro_artix_dc_scm.xdc  arty-lcd-ts.vhdl  arty_a7-35.xdc  arty_a7.vhdl  arty_a7.xdc  clk_gen_bypass.vhd  clk_gen_ecp5.vhd  clk_gen_mcmm.vhd  clk_gen_plle2.vhd  cmod_a7-35.xdc  firmware.hex  genesys2.xdc  hello_world.hex  main_bram.vhdl  main_bram_caravel.vhdl  mw_soc_memory.vhdl  nexys-video.xdc  nexys_a7.xdc  nodivide.patch  pp_fifo.vhd  pp_soc_gpio.vhdl  (+22 more)
rust_lib_demo/: Cargo.toml  Makefile  README.md  Xargo.toml  console.c  console.h  head.S  hello_world.c  powerpc.lds
rust_lib_demo/.cargo/: config
rust_lib_demo/src/: lib.rs
(+1250 files in other folders)
