[package]
name = "microwatt"
version = "0.1.4"
authors = ["Tom Vijlbrief <tvijlbrief@gmail.com>"]
edition = "2018"
description = "Running Rust on the microwatt"
license = "GPL-3.0"

[lib]
name = "mylib"
crate_type = ["staticlib"]

[profile.dev]
panic = "abort"

[dependencies]
heapless = "0.5.4"
cty = "0.2"
#embedded-hal = "0.2.3"
#panic-halt = "0.2.0"
linked_list_allocator = "0.8.2"

[profile.release]
panic = "abort"
codegen-units = 1 # better optimizations
opt-level = 'z'  # Optimize for size.
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
